# CG-Labs

./: .gitignore  README.md
Lab_01/: CMakeLists.txt
Lab_01/src/: main.cpp
Lab_01/src/headers/: Point.hpp  SDL_functions.hpp
Lab_01/src/impl/: Point_impl.cpp  SDL_functions_impl.cpp
Lab_02/: CMakeLists.txt
Lab_02/src/: main.cpp
Lab_02/src/headers/: Vector3f.hpp
Lab_02/src/impl/: Vector3f_impl.cpp
Lab_03/: CMakeLists.txt
Lab_03/src/: main.cpp
Lab_03/src/headers/: camera.hpp  cube.hpp
Lab_03/src/impl/: camera.cpp  cube.cpp
